[package]
name = "mev_inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
# Alloy
alloy = { version = "1.2.1", features = ["full", "rpc-types-eth"] }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Utils
eyre = "0.6"
dotenv = "0.15"

# Serialization + Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }